home and chat page html/css

--- a/chat-app/views/home.handlebars
+++ b/chat-app/views/home.handlebars
@@ -1,1 +1,9 @@
-<h1>Chat App: Home</h1>
+<div class="join-chat-page">
+  <div class="form">
+    <h2 class="form-header">Chat app</h2>
+    <form action="chat" method="POST">
+      <input name="username" placeholder="Enter a username..." type="text" tabindex="1" required autofocus />
+      <button type="submit">Join Chat</button>
+    </form>
+  </div>
+</div>
