--- a/chat-app/views/layouts/main.handlebars
+++ b/chat-app/views/layouts/main.handlebars
@@ -2,7 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Chat App</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
 
