--- a/chat-app/views/chat.handlebars
+++ b/chat-app/views/chat.handlebars
@@ -12,3 +12,6 @@
     <button type="submit" class="msger-send-btn">Send</button>
   </form>
 </section>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="/public/chat.js"></script>
