--- a/recaptcha-v2/views/home.handlebars
+++ b/recaptcha-v2/views/home.handlebars
@@ -1,1 +1,19 @@
-<h1>Example App: Home</h1>
+<div id="container">
+  <div id="content">
+    <form id='form'>
+      <input id="input" type="text" autocomplete="off" name="comment" placeholder="Write a comment...">
+      <div class="g-recaptcha" data-sitekey={{ SITE_KEY }}></div>
+      <br />
+      <button type="submit">Submit</button>
+    </form>
+    <br />
+    <table>
+      <thead>
+        <tr>
+          <th>Comments</th>
+        </tr>
+      </thead>
+      <tbody id="tbody"></tbody>
+    </table>
+  </div>
+</div>
