--- a/recaptcha-v2/views/layouts/main.handlebars
+++ b/recaptcha-v2/views/layouts/main.handlebars
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>reCAPTCHA v2</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
-
     {{{body}}}
-
 </body>
 </html>
